Pendiente: resolver problemas de slider nowrap & pre

--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,51 @@
 }
 
 /** SLIDER **/
+.slide-title {
+    font-size: 40px !important;
+    display: inline-block;
+    max-width: 900px !important;
+    -webkit-word-wrap: break-word;
+    -moz-word-wrap: break-word;
+    -ms-word-wrap: break-word;
+    -o-word-wrap: break-word;
+    word-wrap: break-word;
+}
+.slide-content {
+    font-size: 18px !important;
+    display: inline-block;
+    max-width: 900px !important;
+    -webkit-word-wrap: break-word;
+    -moz-word-wrap: break-word;
+    -ms-word-wrap: break-word;
+    -o-word-wrap: break-word;
+    word-wrap: break-word;
+}
 .slide-title,
 .slide-content {
     position: relative;
     z-index: 22 !important;
+}
+/*.tp-caption {
+    -webkit-word-wrap: break-word;
+    -moz-word-wrap: break-word;
+    -ms-word-wrap: break-word;
+    -o-word-wrap: break-word;
+    word-wrap: break-word;
+    white-space: normal !important;
+    min-width: 100% !important;
+    max-width: 900px !important;
+    padding: 0 15px !important;
+}*/
+
+/** FOOTER **/
+.contact-info p {
+    -webkit-word-wrap: break-word;
+    -moz-word-wrap: break-word;
+    -ms-word-wrap: break-word;
+    -o-word-wrap: break-word;
+    word-wrap: break-word;
+    white-space: 
 }
 
 /* HOME*/
@@ -30,8 +71,21 @@
     background-attachment: fixed;
     background-size: cover;
     padding: 0 0 22px 0;
+    position: relative;
 }
-
+.testimonials::before {
+    position: absolute;
+    display: block;
+    content: " ";
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(10,10,10, 0.30);
+}
+.testimonials .section-header {
+    position: relative; /* Para que pueda ponerse sobre el oerlay*/
+}
 .team-members-section {
     background: url(../images/team-members.png);
     background-position: 50% 50%;
